# otus-cpp

./: CMakeFile.txt  CMakeLists.txt  ip.cpp  ip.h  ip_filter.cpp  misc.cpp  misc.h
.github/: release.yml
.github/workflows/: release.yml
00-cmake/00-basic-project/: CMakeLists.txt  config.h.in  main.cpp
00-cmake/01-library/: CMakeLists.txt
00-cmake/01-library/lib/: CMakeLists.txt  lib.cpp  lib.h
00-cmake/01-library/src/: CMakeLists.txt  main.cpp
00-cmake/example1/: CMakeLists.txt
00-cmake/example2/: CMakeLists.txt  main.cpp  version.cpp  version.h
00-cmake/example4/: CMakeLists.txt
00-cmake/example4/src/: main.cpp
00-cmake/example5/: foo.cpp
00-cmake/example7/: CMakeLists.txt
00-cmake/example7/src/: CMakeLists.txt  main.cpp
00-cmake/example7/sumlib/: CMakeLists.txt  sumlib.cpp  sumlib.h
01-build-systems/: CMakeLists.txt  conanfile.txt
01-build-systems/lib/: CMakeLists.txt  lib.cpp
01-build-systems/src/: CMakeLists.txt
01-build-systems/tests/: CMakeLIsts.txt  CMakeLists.txt
gtest-cmake/: CMakeLists.txt
gtest-cmake/test/: test_version.cpp
gtest-prebuilt/: CMakeLists.txt  README.md
gtest-prebuilt/src/: main.cpp  version.hpp
gtest-prebuilt/test/: test_version.cpp
lesson00/example3/: CMakeLists.txt  main.cpp  version.cpp
lesson00/example4/lib/: CMakeLists.txt  lib.cpp  lib.h
lesson00/example4/src/: CMakeLists.txt
lesson00/example5/: CMakeLists.txt  foo.h  main.cpp
lesson00/example6/: CMakeLists.txt
lesson00/example6/foo/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
test/: CMakeLists.txt  test.cpp  test_version.cpp
